--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <
 </head>
 <body>
-    <h1>Página Home</h1>
-    <a href="vendas.html">Ir para a página de vendas</a>
+    <h1>Pï¿½gina Home</h1>
+    <a href="vendas.html">Ir para a pï¿½gina de vendas</a>
 </body>
 </html>
