--- a/vendas.html
+++ b/vendas.html
@@ -8,7 +8,8 @@
     <
 </head>
 <body>
-    <h1>Página de vendas</h1>
-    <a href="index.html">Voltar para a página inicial</a>
+    <h1>Pï¿½gina de vendas</h1>
+    <p>Vendas = R$ 5000,00</p>
+    <a href="index.html">Voltar para a pï¿½gina inicial</a>
 </body>
 </html>
