--- a/blog.html
+++ b/blog.html
@@ -8,10 +8,6 @@
     <
 </head>
 <body>
-    <h1>Página de blog</h1>
-    <h2>Post número 1</h2>
-    <h2>Post número 2</h2>
-    <p>Vendas = R$ 5000,00</p>
-    <a href="index.html">Voltar para a página inicial</a>
+    <h1>Sobre nós</h1>
 </body>
 </html>
